<resources>
    <string name="app_name">Cuisine</string>
    <string name="enter_your_login_description">Enter your login</string>
    <string name="enter_your_password_description">Enter your password</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="repeat_password">Repeat password</string>
    <string name="e_mail">Email</string>
    <string name="name">Name</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>
    <string name="username">Username</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="best_rated_recipes">Best rated recipes</string>
    <string name="latest_and_fresh">Latest and fresh</string>
    <string name="cuisine_choice">Cuisine choise</string>
    <string name="free">Free</string>
</resources>