<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.config.SignupActivity">

    <ProgressBar
        android:id="@+id/progress_pb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible"/>


    <TextView
        android:id="@+id/logo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/user_credential_linear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/app_name"
        android:textSize="@dimen/text_size_app_name"
        android:textColor="@color/black"/>

    <LinearLayout
        android:id="@+id/user_credential_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/progress_bar_margin"
        android:paddingEnd="@dimen/progress_bar_margin">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <EditText
                android:id="@+id/login_edt"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:maxLines="1"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginTop="@dimen/paragraph_margin">
            <EditText
                android:id="@+id/password_edt"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/forgot_password_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="@dimen/text_size_helper"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/row_margin"
            android:layout_marginEnd="@dimen/paragraph_margin"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottomLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/vertical_margin">

        <Button
            android:id="@+id/signup_btn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/paragraph_margin"
            android:layout_marginStart="@dimen/paragraph_margin"
            android:background="@drawable/btn_secondary_selector"
            android:text="@string/sign_up"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/signin_btn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/paragraph_margin"
            android:layout_marginEnd="@dimen/paragraph_margin"
            android:background="@drawable/btn_main_selector"
            android:text="@string/sign_in"
            android:textSize="15sp"/>
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>